--- a/ControlRoom/ControlRoom.entitlements
+++ b/ControlRoom/ControlRoom.entitlements
@@ -2,7 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>com.apple.security.cs.disable-library-validation</key>
+	<key>com.apple.security.automation.apple-events</key>
 	<true/>
+	<key>com.apple.security.temporary-exception.apple-events</key>
+	<array>
+		<string>com.apple.terminal</string>
+		<string>com.apple.terminal.shell-script</string>
+		<string>com.apple.terminal.settings</string>
+		<string>com.apple.terminal.session</string>
+	</array>
 </dict>
 </plist>
